Changed the font and description

--- a/index.html
+++ b/index.html
@@ -2,9 +2,20 @@
  <html>
 <head>
         <meta charset="utf-8">
-        <title>Hello, Farrah!</title>
+        <title>Farrah's Website</title>
+        <link rel="stylesheet" href="style.css">
 </head>
 <body>
-Hello, Farrah!
+
+    <h1>Farrah Kim</h1>
+    <h2>Welcome to my Website!</h2>
+    <h3>About Me:</h3>
+    <p> Hello! My name is Farrah Kim. I am a senior philosophy major at Occidental College.</p>
+    <h4>Press this link to check out my awesome school!</h4>
+    <a href="https://www.oxy.edu/">Occidental College</a>
+<body>
+    <div class="wrapper"></div>
+    <h3>This is a picture of Oxy</h3>
+    <img src="img/OccidentalCollege.jpg" alt="Photograph of Occidental College">
 </body>
- </html> 
+</html>
